Datepicker css de-bug> extra space shown when gramps assigned pos:sticky

--- a/app/assets/stylesheets/components/home_show.scss
+++ b/app/assets/stylesheets/components/home_show.scss
@@ -76,6 +76,11 @@
   }
 }
 
+.booking-form-cntr {
+  position: sticky;
+  top: 10%;
+}
+
 .booking-form,
 .booking-form-reviewV {
   animation: container;
@@ -252,6 +257,14 @@
   width: 16.8vw;
 }
 
+.react-datepicker {
+  display: flex !important;
+}
+
 .react-datepicker__day--outside-month {
   visibility: hidden;
+}
+
+.react-datepicker__month-container {
+  float: none !important;
 }
